--- a/trig_vurazi.html
+++ b/trig_vurazi.html
@@ -5,14 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Математичний тест</title>
     
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+   <!-- Настройки MathJax -->
+<script>
+window.MathJax = {
+  tex: {
+    inlineMath: [['$', '$'], ['\\(', '\\)']]
+  }
+};
+</script>
 
+<!-- Подключение MathJax -->
+<script id="MathJax-script" defer
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js">
+</script>
+    <script>
+window.addEventListener('load', () => {
+  MathJax.typesetPromise(); // сразу прогоняем все формулы после загрузки
+});
+</script>
     <style>
     /* Основной стиль вопросов */
 .question {
 
-  background-image: url("https://i.postimg.cc/t4jzBh2Z/In_Shot_20251128_232217997.jpg");
+  background-image: url("https://raw.githubusercontent.com/mathdrive/image/refs/heads/main/InShot_20251227_121929694.jpg");
 
   background-size: cover;
 
@@ -83,7 +98,7 @@ body {
 
   font-weight: bold;
 
-  background-image: url("https://i.postimg.cc/t4jzBh2Z/In_Shot_20251128_232217997.jpg");
+  background-image: url("https://raw.githubusercontent.com/mathdrive/image/refs/heads/main/InShot_20251227_121929694.jpg");
 
   background-size: cover;
 
@@ -1003,11 +1018,6 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
 }
 
-
-
-
-
-
 /* 📱 Адаптивні стилі для мобільних пристроїв */
 @media (max-width: 480px) {
   body {
@@ -1039,35 +1049,9 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
     width: 32px !important;
     height: 32px !important;
     font-size: 15px !important;
-  }
-}
-
 }
 </style>
 </head>
-<body>
-
-
-<html lang="ua">
-
-<head>
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-  <title>Математический тест</title>
-  
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-
-<script id="MathJax-script" async
-
- src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-
-</script>
-
-</head>
-
 <body>
 
 <!-- Стартовый экран теста -->
