--- a/trig_vurazi.html
+++ b/trig_vurazi.html
@@ -2265,7 +2265,7 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <div class="results-buttons">
 
     <button id="restart-button" type="button">Пройти тест ще раз</button>
-<a href="http://mathdrive.tilda.ws/page104320376.html">
+ <a href="https://mathdrive.github.io/vsi.testi/vsi_testi.html">
     <button id="back-to-list-button" type="button">Перейти до переліку тестів</button>
 
   </div>
