--- a/trig_vurazi.html
+++ b/trig_vurazi.html
@@ -1237,7 +1237,7 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <label for="q4b" class="square-btn">Б</label>
 
-    <input type="radio" name="q4" value="" id="q4c">
+    <input type="radio" name="q4" value="В" id="q4c">
 
     <label for="q4c" class="square-btn">В</label>
 
@@ -1306,15 +1306,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">\( \frac{1}{9} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">\( \frac{1}{8} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\( 18 \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">\( 16 \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">\( 6 \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">\( 8 \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\( \frac{1}{18} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\( \frac{1}{16} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\( 9 \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">\( -8 \)</span></li>
 
   </ul>
 
@@ -2310,13 +2310,13 @@ questionNav.style.display = "none";
 
 const correctAnswers = {
 
-  "q1": "В", "q2": "Б", "q3": "Б", "q4": "В", "q5": "A",
+  "q1": "В", "q2": "Б", "q3": "Б", "q4": "В", "q5": "А",
 
-  "q6": "Б", "q7": "Г", "q8": "Б", "q9": "Д", "q10": "A",
+  "q6": "В", "q7": "Г", "q8": "Б", "q9": "Д", "q10": "А",
 
   "q11": "Д", "q12": "Б", "q13": "В", "q14": "Г", "q15": "Б",
 
-  "q16": "A", "q17": "Б", "q18": "Д", "q19": "В", "q20": "Г",
+  "q16": "А", "q17": "Б", "q18": "Д", "q19": "В", "q20": "Г",
 
   "q21": { "1": "Д", "2": "В", "3": "Б" },
 
