--- a/trig_vurazi.html
+++ b/trig_vurazi.html
@@ -1072,7 +1072,7 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <!-- Завдання 1 -->
 <div class="question" id="q1" data-correct="C">
-  <p>1. Спростіть вираз: \(\ sin (\frac{7\pi}{2} – \alpha\)).</p>
+  <p>1. Спростіть вираз: \(\displaystyle \ sin (\frac{7\pi}{2} – \alpha\)).</p>
 
   <!-- Варианты ответа -->
 
