--- a/trig_vurazi.html
+++ b/trig_vurazi.html
@@ -1169,15 +1169,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">\( \frac{\sqrt{3}}{2} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">\(\displaystyle \frac{\sqrt{3}}{2} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text"> \( -\frac{1}{2} \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text"> \(\displaystyle -\frac{1}{2} \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text"> \( -\frac{\sqrt{2}}{2} \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text"> \(\displaystyle -\frac{\sqrt{2}}{2} \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\( -\frac{\sqrt{3}}{2} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle -\frac{\sqrt{3}}{2} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text"> \( \frac{1}{2} \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text"> \(\displaystyle \frac{1}{2} \)</span></li>
 
   </ul>
 
@@ -1211,19 +1211,19 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
 <div class="question" id="q4" data-correct="C">
 
-  <p>4. Обчисліть: \( \arccos\left(-\frac{\sqrt{3}}{2}\right) \)</p>
+  <p>4. Обчисліть: \(\displaystyle \arccos\left(-\frac{\sqrt{3}}{2}\right) \)</p>
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text"> \( -\frac{\pi}{3} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text"> \(\displaystyle -\frac{\pi}{3} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\( -\frac{\pi}{6} \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\displaystyle -\frac{\pi}{6} \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text"> \( \frac{5\pi}{6} \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text"> \(\displaystyle \frac{5\pi}{6} \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text"> \( \frac{\pi}{3} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text"> \(\displaystyle \frac{\pi}{3} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text"> \( \frac{\pi}{6} \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text"> \(\displaystyle \frac{\pi}{6} \)</span></li>
 
   </ul>
 
@@ -1260,15 +1260,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">\( \frac{2}{5} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">\(\displaystyle \frac{2}{5} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\( -\frac{2}{5} \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\displaystyle -\frac{2}{5} \)</span></li>
 
     <li><span class="choice-letter">В.</span><span class="choice-text">\( -3 \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\( \frac{5}{2} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \frac{5}{2} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\( -\frac{5}{2} \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">\(\displaystyle -\frac{5}{2} \)</span></li>
 
   </ul>
 
@@ -1302,17 +1302,17 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
 <div class="question" id="q6" data-correct="B">
 
-  <p>6. Обчисліть значення виразу \( \frac{\operatorname{2ctg}\alpha}{\operatorname{tg}\alpha} \), якщо \( \operatorname{tg}\alpha = \frac{1}{2} \).</p>
+  <p>6. Обчисліть значення виразу \(\displaystyle \frac{\operatorname{2ctg}\alpha}{\operatorname{tg}\alpha} \), якщо \(\displaystyle \operatorname{tg}\alpha = \frac{1}{2} \).</p>
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">\( \frac{1}{8} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">\(\displaystyle \frac{1}{8} \)</span></li>
 
     <li><span class="choice-letter">Б.</span><span class="choice-text">\( 16 \)</span></li>
 
     <li><span class="choice-letter">В.</span><span class="choice-text">\( 8 \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\( \frac{1}{16} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \frac{1}{16} \)</span></li>
 
     <li><span class="choice-letter">Д.</span><span class="choice-text">\( -8 \)</span></li>
 
@@ -1347,19 +1347,19 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
 <div class="question" id="q7" data-correct="D">
 
-  <p>7. Обчисліть значення виразу \( \frac{5\cos\alpha + 6\sin\alpha}{3\sin\alpha - 8\cos\alpha} \), якщо \( \operatorname{tg}\alpha = 4 \).</p>
+  <p>7. Обчисліть значення виразу \(\displaystyle \frac{5\cos\alpha + 6\sin\alpha}{3\sin\alpha - 8\cos\alpha} \), якщо \( \operatorname{tg}\alpha = 4 \).</p>
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">\( \frac{4}{29} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">\(\displaystyle \frac{4}{29} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\( \frac{4}{9} \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\displaystyle \frac{4}{9} \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">\( \frac{24}{7} \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">\(\displaystyle \frac{24}{7} \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\( \frac{29}{4} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \frac{29}{4} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\( \frac{7}{24} \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">\(\displaystyle \frac{7}{24} \)</span></li>
 
   </ul>
 
@@ -1393,17 +1393,17 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
 <div class="question" id="q8" data-correct="B">
 
-  <p>8. Обчисліть: \( \cos^4\left(\frac{\pi}{12}\right) - \sin^4\left(\frac{\pi}{12}\right) \).</p>
+  <p>8. Обчисліть: \(\displaystyle \cos^4\left(\frac{\pi}{12}\right) - \sin^4\left(\frac{\pi}{12}\right) \).</p>
 
   <ul class="choices">
 
     <li><span class="choice-letter">А.</span><span class="choice-text">\( 0 \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\( \frac{\sqrt{3}}{2} \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\displaystyle \frac{\sqrt{3}}{2} \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">\( \frac{1}{2} \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">\(\displaystyle \frac{1}{2} \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\( \frac{\sqrt{2}}{2} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \frac{\sqrt{2}}{2} \)</span></li>
 
     <li><span class="choice-letter">Д.</span><span class="choice-text">\( 1 \)</span></li>
 
@@ -1651,11 +1651,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <p>14. Якому проміжку належить значення виразу \( \sin 415^\circ \)? </p>
 
   <ul class="choices">
-    <li><span class="choice-letter">А.</span><span class="choice-text">\( \left( -1; -\frac{1}{2} \right) \)</span></li>
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\( \left( -\frac{1}{2}; \frac{1}{2} \right) \)</span></li>
-    <li><span class="choice-letter">В.</span><span class="choice-text">\( \left( \frac{1}{2}; \frac{\sqrt{2}}{2} \right) \)</span></li>
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\( \left( \frac{\sqrt{2}}{2}; \frac{\sqrt{3}}{2} \right) \)</span></li>
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\( \left( \frac{\sqrt{3}}{2}; 1 \right) \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">\(\displaystyle \left( -1; -\frac{1}{2} \right) \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\displaystyle \left( -\frac{1}{2}; \frac{1}{2} \right) \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">\(\displaystyle \left( \frac{1}{2}; \frac{\sqrt{2}}{2} \right) \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \left( \frac{\sqrt{2}}{2}; \frac{\sqrt{3}}{2} \right) \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">\(\displaystyle \left( \frac{\sqrt{3}}{2}; 1 \right) \)</span></li>
   </ul>
 
   <div class="answer-buttons">
@@ -1678,7 +1678,7 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   
   <!-- Задание 15-->
 <div class="question" id="q15" data-correct="B">
-  <p>15. Чому дорівнює \( \cos \alpha \), якщо \( \sin \alpha = -0,4 \) та \( \frac{3\pi}{2} < \alpha < 2\pi \)? </p>
+  <p>15. Чому дорівнює \( \cos \alpha \), якщо \( \sin \alpha = -0,4 \) та \(\displaystyle \frac{3\pi}{2} < \alpha < 2\pi \)? </p>
 
   <ul class="choices">
     <li><span class="choice-letter">А.</span><span class="choice-text">\( 0,6 \)</span></li>
@@ -1738,14 +1738,14 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   
   <!-- Задание 17-->
 <div class="question" id="q17" data-correct="B">
-  <p>17. Спростіть вираз \( \frac{\sin\frac{2\pi}{3}}{2\cos\frac{\pi}{3}} \)</p>
+  <p>17. Спростіть вираз \(\displaystyle \frac{\sin\frac{2\pi}{3}}{2\cos\frac{\pi}{3}} \)</p>
 
   <ul class="choices">
-    <li><span class="choice-letter">А.</span><span class="choice-text">\(\frac{1}{2}\)</span></li>
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\frac{\sqrt{3}}{2}\)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">\(\displaystyle \frac{1}{2}\)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\displaystyle \frac{\sqrt{3}}{2}\)</span></li>
     <li><span class="choice-letter">В.</span><span class="choice-text">\(1\)</span></li>
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(-\frac{1}{2}\)</span></li>
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\(-\frac{\sqrt{3}}{2}\)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle -\frac{1}{2}\)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">\(\displaystyle -\frac{\sqrt{3}}{2}\)</span></li>
   </ul>
 
   <div class="answer-buttons">
@@ -1803,9 +1803,9 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <ul class="choices">
     <li><span class="choice-letter">А.</span><span class="choice-text">\(2\pi\)</span></li>
     <li><span class="choice-letter">Б.</span><span class="choice-text">\(\pi\)</span></li>
-    <li><span class="choice-letter">В.</span><span class="choice-text">\(\frac{\pi}{3}\)</span></li>
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\frac{2\pi}{3}\)</span></li>
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\(\frac{\pi}{2}\)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">\(\displaystyle \frac{\pi}{3}\)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \frac{2\pi}{3}\)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">\(\displaystyle \frac{\pi}{2}\)</span></li>
   </ul>
 
   <div class="answer-buttons">
@@ -1831,10 +1831,10 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <p>20. Знайдіть значення виразу \(-2\sin75^\circ\cos75^\circ\).</p>
 
   <ul class="choices">
-    <li><span class="choice-letter">А.</span><span class="choice-text">\(\frac{\sqrt{3}}{2}\)</span></li>
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\frac{1}{2}\)</span></li>
-    <li><span class="choice-letter">В.</span><span class="choice-text">\(-\frac{\sqrt{3}}{2}\)</span></li>
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(-\frac{1}{2}\)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">\(\displaystyle \frac{\sqrt{3}}{2}\)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\displaystyle \frac{1}{2}\)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">\(\displaystyle -\frac{\sqrt{3}}{2}\)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle -\frac{1}{2}\)</span></li>
     <li><span class="choice-letter">Д.</span><span class="choice-text">\(1\)</span></li>
   </ul>
 
@@ -1932,10 +1932,10 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <div class="right-column">
       <h4>Тотожні вирази</h4>
-      <p>А. \(\sin60^\circ\)</p>
-      <p>Б. \(\cos60^\circ\)</p>
+      <p>А. &nbsp;&nbsp;&nbsp;\(\sin60^\circ\)</p>
+      <p>Б. &nbsp;&nbsp;&nbsp;\(\cos60^\circ\)</p>
       <p>В. \(-\sin60^\circ\)</p>
-      <p>Г. \(\sin30^\circ\)</p>
+      <p>Г. &nbsp;&nbsp;&nbsp;&nbsp;\(\sin30^\circ\)</p>
       <p>Д. \(-\cos60^\circ\)</p>
     </div>
   </div>
@@ -1994,10 +1994,10 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <div class="right-column">
       <h4>Значення</h4>
-      <p>А. \(-\frac{\sqrt2}{2}\)</p>
-      <p>Б. \(\frac{1}{2}\)</p>
-      <p>В. \(-\frac{1}{2}\)</p>
-      <p>Г. \(\frac{\sqrt2}{2}\)</p>
+      <p>А. \(\displaystyle -\frac{\sqrt2}{2}\)</p>
+      <p>Б. &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</p>
+      <p>В. \(\displaystyle -\frac{1}{2}\)</p>
+      <p>Г. &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\sqrt2}{2}\)</p>
       <p>Д. \(-1\)</p>
     </div>
   </div>
@@ -2048,17 +2048,17 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <div class="matching">
     <div class="left-column">
       <h4>Кути</h4>
-      <p>1. \(\sin\left(\frac{\pi}{3}\right)\)</p>
-      <p>2. \(\operatorname{tg}\left(\frac{\pi}{3}\right)\)</p>
-      <p>3. \(\operatorname{ctg}\left(\frac{\pi}{3}\right)\)</p>
+      <p>1. \(\displaystyle \sin\left(\frac{\pi}{3}\right)\)</p>
+      <p>2. \(\displaystyle \operatorname{tg}\left(\frac{\pi}{3}\right)\)</p>
+      <p>3. \(\displaystyle \operatorname{ctg}\left(\frac{\pi}{3}\right)\)</p>
     </div>
 
     <div class="right-column">
       <h4>Значення</h4>
-      <p>А. \(\frac{\sqrt{3}}{2}\)</p>
-      <p>Б. \(\frac{1}{2}\)</p>
-      <p>В. \(-\frac{1}{2}\)</p>
-      <p>Г. \(\frac{1}{\sqrt{3}}\)</p>
+      <p>А. &nbsp;\(\displaystyle \frac{\sqrt{3}}{2}\)</p>
+      <p>Б. &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2}\)</p>
+      <p>В. \(\displaystyle -\frac{1}{2}\)</p>
+      <p>Г. &nbsp;&nbsp;\(\displaystyle \frac{1}{\sqrt{3}}\)</p>
       <p>Д. \(\sqrt{3}\)</p>
     </div>
   </div>
@@ -2118,11 +2118,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <div class="right-column">
       <h4>Значення</h4>
-      <p>А. \(3 - 2\sin^2\alpha\)</p>
-      <p>Б. \(-3 - \sin^2\alpha\)</p>
-      <p>В. \(3 + 2\sin^2\alpha\)</p>
-      <p>Г. \(3 - \sin^2\alpha\)</p>
-      <p>Д. \(3 + \sin^2\alpha\)</p>
+      <p>А. &nbsp;&nbsp;&nbsp;\(3 - 2\sin^2\alpha\)</p>
+      <p>Б. &nbsp;\(-3 - \sin^2\alpha\)</p>
+      <p>В. &nbsp;&nbsp;&nbsp;\(3 + 2\sin^2\alpha\)</p>
+      <p>Г. &nbsp;&nbsp;&nbsp;\(3 - \sin^2\alpha\)</p>
+      <p>Д. &nbsp;&nbsp;&nbsp;\(3 + \sin^2\alpha\)</p>
     </div>
   </div>
 
@@ -2168,7 +2168,7 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   
   <!-- Задание 26 -->
 <div class="question" id="q26">
-  <p><strong>26. Обчисліть \(\cos\beta\), якщо \(\sin\beta = 0,8, \frac{\pi}{2} < \beta < \pi\).</strong></p>
+  <p><strong>26. Обчисліть \(\displaystyle \cos\beta\), якщо \(\sin\beta = 0,8, \frac{\pi}{2} < \beta < \pi\).</strong></p>
     
     <input type="text" class="open-answer" name="q26" data-correct="18"
 
@@ -2201,7 +2201,7 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
 <!-- Задание 29 -->
 <div class="question" id="q29">
-  <p><strong>29. Обчисліть \(4 \sin\frac{\pi}{3} \cos\frac{\pi}{6} + \sqrt{3}\operatorname {tg}\frac{\pi}{3}\)</strong></p>
+  <p><strong>29. Обчисліть \(\displaystyle 4 \sin\frac{\pi}{3} \cos\frac{\pi}{6} + \sqrt{3}\operatorname {tg}\frac{\pi}{3}\)</strong></p>
   
   <input type="text" class="open-answer" name="q29" data-correct="0" placeholder="Введіть свою відповідь">
   <button type="button" class="check-btn">Підтвердити вибір</button>
