--- a/trig_vurazi.html
+++ b/trig_vurazi.html
@@ -1077,11 +1077,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <!-- Варианты ответа -->
 
     <ul>
-  <li><span class="choice-letter">А.</span> \( \cos\alpha \)</li>
-  <li><span class="choice-letter">Б.</span> \( \sin \alpha \)</li>
-  <li><span class="choice-letter">В.</span> \( -\cos \alpha \)</li>
-  <li><span class="choice-letter">Г.&nbsp;</span>\(1\)</li>
-  <li><span class="choice-letter">Д.</span> \( -\sin \alpha \)</li>
+  <li><span class="choice-letter">А.</span> &nbsp;&nbsp;&nbsp;\( \cos\alpha \)</li>
+  <li><span class="choice-letter">Б.</span> &nbsp;&nbsp;&nbsp;\( \sin \alpha \)</li>
+  <li><span class="choice-letter">В.</span> &nbsp;\( -\cos \alpha \)</li>
+  <li><span class="choice-letter">Г.&nbsp;</span>&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</li>
+  <li><span class="choice-letter">Д.</span>&nbsp; \( -\sin \alpha \)</li>
 </ul>
   
   <!-- Радио-кнопки для выбора правильного варианта -->
@@ -1124,7 +1124,7 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <li> <span class="choice-letter">Б.</span><span class="choice-text"> \( \operatorname{tg}^2 \alpha \)</span></li>
 
-  <li><span class="choice-letter">В.</span><span class="choice-text"> \(1\)</span></li>
+  <li><span class="choice-letter">В.</span><span class="choice-text"> &nbsp;&nbsp;&nbsp;\(1\)</span></li>
 
   <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text"> \( \sin 2\alpha \)</span></li>
 
@@ -1169,15 +1169,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">\(\displaystyle \frac{\sqrt{3}}{2} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\sqrt{3}}{2} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text"> \(\displaystyle -\frac{1}{2} \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text"> &nbsp;&nbsp;\(\displaystyle -\frac{1}{2} \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text"> \(\displaystyle -\frac{\sqrt{2}}{2} \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text"> &nbsp;\(\displaystyle -\frac{\sqrt{2}}{2} \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle -\frac{\sqrt{3}}{2} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(\displaystyle -\frac{\sqrt{3}}{2} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text"> \(\displaystyle \frac{1}{2} \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; \(\displaystyle \frac{1}{2} \)</span></li>
 
   </ul>
 
@@ -1215,15 +1215,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text"> \(\displaystyle -\frac{\pi}{3} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text"> &nbsp;&nbsp;\(\displaystyle -\frac{\pi}{3} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\displaystyle -\frac{\pi}{6} \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text"> &nbsp;&nbsp;\(\displaystyle -\frac{\pi}{6} \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text"> \(\displaystyle \frac{5\pi}{6} \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text"> &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{5\pi}{6} \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text"> \(\displaystyle \frac{\pi}{3} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text"> &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\pi}{3} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text"> \(\displaystyle \frac{\pi}{6} \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text"> &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\pi}{6} \)</span></li>
 
   </ul>
 
@@ -1260,15 +1260,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">\(\displaystyle \frac{2}{5} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{2}{5} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\displaystyle -\frac{2}{5} \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;\(\displaystyle -\frac{2}{5} \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">\( -3 \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;\( -3 \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \frac{5}{2} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{5}{2} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\(\displaystyle -\frac{5}{2} \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;\(\displaystyle -\frac{5}{2} \)</span></li>
 
   </ul>
 
