--- a/trig_vurazi.html
+++ b/trig_vurazi.html
@@ -1077,8 +1077,8 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <!-- Варианты ответа -->
 
     <ul>
-  <li><span class="choice-letter">А.</span> &nbsp;&nbsp;&nbsp;\( \cos\alpha \)</li>
-  <li><span class="choice-letter">Б.</span> &nbsp;&nbsp;&nbsp;\( \sin \alpha \)</li>
+  <li><span class="choice-letter">А.</span> &nbsp;&nbsp;&nbsp;&nbsp;\( \cos\alpha \)</li>
+  <li><span class="choice-letter">Б.</span> &nbsp;&nbsp;&nbsp;&nbsp;\( \sin \alpha \)</li>
   <li><span class="choice-letter">В.</span> &nbsp;\( -\cos \alpha \)</li>
   <li><span class="choice-letter">Г.&nbsp;</span>&nbsp;&nbsp;&nbsp;&nbsp;\(1\)</li>
   <li><span class="choice-letter">Д.</span>&nbsp; \( -\sin \alpha \)</li>
@@ -1169,15 +1169,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\sqrt{3}}{2} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\sqrt{3}}{2} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text"> &nbsp;&nbsp;\(\displaystyle -\frac{1}{2} \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text"> &nbsp;&nbsp;&nbsp;\(\displaystyle -\frac{1}{2} \)</span></li>
 
     <li><span class="choice-letter">В.</span><span class="choice-text"> &nbsp;\(\displaystyle -\frac{\sqrt{2}}{2} \)</span></li>
 
     <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(\displaystyle -\frac{\sqrt{3}}{2} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; \(\displaystyle \frac{1}{2} \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; \(\displaystyle \frac{1}{2} \)</span></li>
 
   </ul>
 
@@ -1219,11 +1219,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <li><span class="choice-letter">Б.</span><span class="choice-text"> &nbsp;&nbsp;\(\displaystyle -\frac{\pi}{6} \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text"> &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{5\pi}{6} \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text"> &nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{5\pi}{6} \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text"> &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\pi}{3} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text"> &nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\pi}{3} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text"> &nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\pi}{6} \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text"> &nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{\pi}{6} \)</span></li>
 
   </ul>
 
@@ -1264,7 +1264,7 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
     <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;\(\displaystyle -\frac{2}{5} \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;\( -3 \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;\( -3 \)</span></li>
 
     <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{5}{2} \)</span></li>
 
