--- a/trig_vurazi.html
+++ b/trig_vurazi.html
@@ -1306,15 +1306,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">\(\displaystyle \frac{1}{8} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;\(\displaystyle \frac{1}{8} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\( 16 \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;\( 16 \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">\( 8 \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( 8 \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \frac{1}{16} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(\displaystyle \frac{1}{16} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\( -8 \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;\( -8 \)</span></li>
 
   </ul>
 
@@ -1351,15 +1351,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">\(\displaystyle \frac{4}{29} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;\(\displaystyle \frac{4}{29} \)</span></li>
 
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\(\displaystyle \frac{4}{9} \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;\(\displaystyle \frac{4}{9} \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">\(\displaystyle \frac{24}{7} \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;\(\displaystyle \frac{24}{7} \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \frac{29}{4} \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(\displaystyle \frac{29}{4} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\(\displaystyle \frac{7}{24} \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;\(\displaystyle \frac{7}{24} \)</span></li>
 
   </ul>
 
@@ -1397,15 +1397,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">\( 0 \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( 0 \)</span></li>
 
     <li><span class="choice-letter">Б.</span><span class="choice-text">\(\displaystyle \frac{\sqrt{3}}{2} \)</span></li>
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">\(\displaystyle \frac{1}{2} \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(\displaystyle \frac{1}{2} \)</span></li>
 
     <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(\displaystyle \frac{\sqrt{2}}{2} \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\( 1 \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( 1 \)</span></li>
 
 </ul>
   
@@ -1443,15 +1443,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
 
   <ul class="choices">
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">\( 0 \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( 0 \)</span></li>
 
     <li><span class="choice-letter">Б.</span><span class="choice-text">\( -1 \)</span></li>
 
     <li><span class="choice-letter">В.</span><span class="choice-text">\( -2 \)</span></li>
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\( 2 \)</span></li>
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( 2 \)</span></li>
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\( 1 \)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( 1 \)</span></li>
 
   </ul>
 
@@ -1580,15 +1580,15 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
       
  <ul class="choices"> 
 
-    <li><span class="choice-letter">А.</span><span class="choice-text">\(-1\)</span></li>  
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;\(-1\)</span></li>  
 
     <li><span class="choice-letter">Б.</span><span class="choice-text">\(-0,5\)</span></li>  
 
-    <li><span class="choice-letter">В.</span><span class="choice-text">\(0\)</span></li>  
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(0\)</span></li>  
 
-    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\(0,5\)</span></li>  
+    <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">&nbsp;\(0,5\)</span></li>  
 
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\(1\)</span></li>  
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\(1\)</span></li>  
 
   </ul>    <div class="answer-buttons">  
 
@@ -1681,11 +1681,11 @@ box-shadow: 0 0 10px rgba(74, 123, 247, 0.6);
   <p>15. Чому дорівнює \( \cos \alpha \), якщо \( \sin \alpha = -0,4 \) та \(\displaystyle \frac{3\pi}{2} < \alpha < 2\pi \)? </p>
 
   <ul class="choices">
-    <li><span class="choice-letter">А.</span><span class="choice-text">\( 0,6 \)</span></li>
-    <li><span class="choice-letter">Б.</span><span class="choice-text">\( \sqrt{0,84} \)</span></li>
-    <li><span class="choice-letter">В.</span><span class="choice-text">\( \sqrt{0,16} \)</span></li>
+    <li><span class="choice-letter">А.</span><span class="choice-text">&nbsp;&nbsp;&nbsp;\( 0,6 \)</span></li>
+    <li><span class="choice-letter">Б.</span><span class="choice-text">&nbsp;\( \sqrt{0,84} \)</span></li>
+    <li><span class="choice-letter">В.</span><span class="choice-text">&nbsp;\( \sqrt{0,16} \)</span></li>
     <li><span class="choice-letter">Г.&nbsp;</span><span class="choice-text">\( -\sqrt{0,84} \)</span></li>
-    <li><span class="choice-letter">Д.</span><span class="choice-text">\(-0,6\)</span></li>
+    <li><span class="choice-letter">Д.</span><span class="choice-text">&nbsp;\(-0,6\)</span></li>
   </ul>
 
   <div class="answer-buttons">
